# iwagui

./: CMakeLists.txt  LICENSE
examples/main/: 1784637052.iwalog  1784637056.iwalog  CMakeLists.txt  main.cpp  ui.cpp  ui.hpp
iwa/: CMakeLists.txt  config.hpp  event.hpp  iwagui.hpp  logger.cpp  logger.hpp  singleton.cpp
iwa/ui/: bases.cpp  bases.hpp  easings.cpp  easings.hpp  font.cpp  font.hpp  text.cpp  text.hpp  tween.cpp  tween.hpp  utils.cpp  utils.hpp  widgets.hpp  windows.cpp  windows.hpp  zindex_manager.cpp  zindex_manager.hpp
iwa/ui/animations/: tween.hpp
iwa/ui/bases/: attributes.cpp  attributes.hpp  canvas.cpp  canvas.hpp  widget.cpp  widget.hpp
iwa/ui/utils/: utils.hpp
iwa/ui/widgets/: interactables.cpp  interactables.hpp  text.cpp  text.hpp  windows.cpp  windows.hpp
src/: event.hpp  logger.cpp  logger.hpp  utils.hpp
src/ui/: bases.hpp  text.cpp  tween.cpp  ui.cpp  ui.hpp  utils.hpp  widgets.hpp  windows.cpp
